refactor: refatorando a parte do handling de exceções.